2011-03-15  Ben Elliston  <bje@gnu.org>

	* runtest: Remove trailing semicolons.
	* lib/rsh.exp: Likewise.

2011-03-15  H.J. Lu  <hjl.tools@gmail.com>

	* lib/remote.exp (local_exec): Ignore SIGHUP.

2011-03-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp (frame_version): Set to 1.5.1.
	* configure.ac (AC_INIT): Set version to 1.5.1.
	* configure: Regenerate.
	* doc/dejagnu.xml (appversion, version): Set to 1.5.1.
	* doc/dejagnu.texi: Regenerate.

2011-03-14  Ben Elliston  <bje@gnu.org>

	* dejagnu.h: Whitespace cleanups.

2011-03-14  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Remove trailing semicolon(s).
	* baseboards/mt-sid.exp: Likewise.
	* baseboards/tx39-sim.exp: Likewise.
	* lib/target.exp (default_target_compile): Likewise.

2011-03-14  Ben Elliston  <bje@gnu.org>

	Reported by Flash Sheridan <flash@pobox.com>:
	* doc/user.xml (Testing "Hello world" locally): Improve the
	example test script and make it robust to failures.  Tidy some
	formatting errors.
	* doc/dejagnu.texi: Regenerate.

2011-03-14  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* runtest.exp (runtest): Call reset_vars at initialisation so that
	perror does not affect test results in other test scripts.

2011-03-09  Ben Elliston  <bje@gnu.org>

	* NEWS: Start a new section for post-1.5 changes.

2011-03-09  Ben Elliston  <bje@gnu.org>

	* DejaGnu 1.5 released.

2011-03-09  Ben Elliston  <bje@gnu.org>

	* Makefile.am (DISTCLEANFILES): Define.
	* Makefile.in: Regenerate.
	* testsuite/runtest.all/libs.exp: Clean up temp files on exit.
	* testsuite/runtest.all/options.exp: Likewise for dbg.log.
	* testsuite/runtest.all/stats.exp: Likewise for tmpdir. Use "file
	mkdir" instead of exec'ing mkdir(1).

2011-03-07  Ben Elliston  <bje@gnu.org>

	* Makefile.am (doc/dejagnu.texi): Conditional on MAINTAINER_MODE.
	* Makefile.in: Regenerate.

2011-03-06  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Set version to 1.5.
	* configure: Regenerate.